--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
   "devDependencies": {
     "@eslint/js": "^9.9.0",
     "@tailwindcss/typography": "^0.5.15",
+    "@types/hls.js": "^0.13.3",
     "@types/node": "^22.5.5",
     "@types/react": "^18.3.24",
     "@types/react-dom": "^18.3.7",
